--- a/src/shared/layouts/GeneralLayout/GeneralLayout.module.css
+++ b/src/shared/layouts/GeneralLayout/GeneralLayout.module.css
@@ -1,5 +1,6 @@
 .layout {
   display: grid;
+  grid-template-columns: 100%;
   grid-template-rows: auto 1fr auto;
   min-height: 100dvh;
 }
